--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "draft-js": "^0.11.7",
+    "is-hotkey": "^0.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "slate-history": "^0.109.0",
+    "slate-react": "^0.110.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
